@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>ReleaseDialog</class>
- <widget class="QDialog" name="ReleaseDialog">
+ <class>ReleaseDialogClass</class>
+ <widget class="QDialog" name="ReleaseDialogClass">
   <property name="geometry">
    <rect>
     <x>0</x>
